logs/mobility/build.make.106.log.stderr
In file included from /home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:1:0:
/home/steven/rover_workspace/src/mobility/src/DropOffController.h:20:16: error: ‘stateSet’ has not been declared
  void setState(stateSet){state = stateSet;}
                ^
/home/steven/rover_workspace/src/mobility/src/DropOffController.h: In member function ‘void DropOffController::setState(int)’:
/home/steven/rover_workspace/src/mobility/src/DropOffController.h:20:34: error: ‘stateSet’ was not declared in this scope
  void setState(stateSet){state = stateSet;}
                                  ^
make[2]: *** [CMakeFiles/mobility.dir/src/DropOffController.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
In file included from /home/steven/rover_workspace/src/mobility/src/mobility.cpp:23:0:
/home/steven/rover_workspace/src/mobility/src/DropOffController.h:20:16: error: ‘stateSet’ has not been declared
  void setState(stateSet){state = stateSet;}
                ^
/home/steven/rover_workspace/src/mobility/src/DropOffController.h: In member function ‘void DropOffController::setState(int)’:
/home/steven/rover_workspace/src/mobility/src/DropOffController.h:20:34: error: ‘stateSet’ was not declared in this scope
  void setState(stateSet){state = stateSet;}
                                  ^
/home/steven/rover_workspace/src/mobility/src/mobility.cpp: In function ‘void doDropOffControllerMovements()’:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:509:25: warning: extended initializer lists only available with -std=c++11 or -std=gnu++11 [enabled by default]
 const string stateNames[] {"FINDING_BASE","ADJUSTING_ANGLE_FOR_ENTRRY","ENTERING_BASE","DROPPING_CUBE","BACKING_OUT_OF_BASE","DONE_DROPPING_OFF"};
                         ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
